force-app/main/default/objects/AFSC__FSUsageStatistic__c/AFSC__FSUsageStatistic__c.object-meta.xml
<CustomObject>
    <description>F-Secure Cloud Protection: Storage for url and file scan statistics</description>
    <label>Usage Statistic</label>
    <nameField>
        <label>Usage Statistic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>