force-app/main/default/objects/AFSC__FSUsageStatistic__c/fields/AFSC__Date__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>