force-app/main/default/objects/AFSC__FSUsageStatistic__c/fields/AFSC__File_Downloads__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Downloads__c</fullName>
    <label>File Downloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>