force-app/main/default/objects/AFSC__FSUsageStatistic__c/fields/AFSC__File_Uploads__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Uploads__c</fullName>
    <label>File Uploads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>