force-app/main/default/objects/AFSC__FSUsageStatistic__c/fields/AFSC__Scan_Job_Events__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Scan_Job_Events__c</fullName>
    <label>Scan Job Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>