force-app/main/default/objects/AFSC__FSUsageStatistic__c/fields/AFSC__URL_Clicks__c.field-meta.xml
<CustomField>
    <fullName>AFSC__URL_Clicks__c</fullName>
    <label>URL Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>